@@ -95,27 +95,27 @@
   ([rails scr tests run]         '("Run tests ..."     . rails-rake-tests))
 
   ([rails scr gen] (cons "Generate" (make-sparse-keymap "Generate")))
-  ([rails scr gen resource]   '("Resource"         . rails-generate-resource))
-  ([rails scr gen observer]   '("Observer"         . rails-generate-observer))
-  ([rails scr gen mailer]     '("Mailer"           . rails-generate-mailer))
-  ([rails scr gen plugin]     '("Plugin"           . rails-generate-plugin))
-  ([rails scr gen migration]  '("Migration"        . rails-generate-migration))
-  ([rails scr gen scaffold]   '("Scaffold"         . rails-generate-scaffold))
-  ([rails scr gen model]      '("Model"            . rails-generate-model))
-  ([rails scr gen controller] '("Controller"       . rails-generate-controller))
+  ([rails scr gen resource]   '("Resource"         . rails-script:generate-resource))
+  ([rails scr gen observer]   '("Observer"         . rails-script:generate-observer))
+  ([rails scr gen mailer]     '("Mailer"           . rails-script:generate-mailer))
+  ([rails scr gen plugin]     '("Plugin"           . rails-script:generate-plugin))
+  ([rails scr gen migration]  '("Migration"        . rails-script:generate-migration))
+  ([rails scr gen scaffold]   '("Scaffold"         . rails-script:generate-scaffold))
+  ([rails scr gen model]      '("Model"            . rails-script:generate-model))
+  ([rails scr gen controller] '("Controller"       . rails-script:generate-controller))
   ([rails scr gen separator]  '("--"))
-  ([rails scr gen run]        '("Run generate ..." . rails-generate))
+  ([rails scr gen run]        '("Run generate ..." . rails-script:generate))
 
   ([rails scr destr] (cons "Destroy" (make-sparse-keymap "Generators")))
-  ([rails scr destr resource]   '("Resource"        . rails-destroy-resource))
-  ([rails scr destr observer]   '("Observer"        . rails-destroy-observer))
-  ([rails scr destr mailer]     '("Mailer"          . rails-destroy-mailer))
-  ([rails scr destr migration]  '("Migration"       . rails-destroy-migration))
-  ([rails scr destr scaffold]   '("Scaffold"        . rails-destroy-scaffold))
-  ([rails scr destr model]      '("Model"           . rails-destroy-model))
-  ([rails scr destr controller] '("Controller"      . rails-destroy-controller))
+  ([rails scr destr resource]   '("Resource"        . rails-script:destroy-resource))
+  ([rails scr destr observer]   '("Observer"        . rails-script:destroy-observer))
+  ([rails scr destr mailer]     '("Mailer"          . rails-script:destroy-mailer))
+  ([rails scr destr migration]  '("Migration"       . rails-script:destroy-migration))
+  ([rails scr destr scaffold]   '("Scaffold"        . rails-script:destroy-scaffold))
+  ([rails scr destr model]      '("Model"           . rails-script:destroy-model))
+  ([rails scr destr controller] '("Controller"      . rails-script:destroy-controller))
   ([rails scr destr separator]  '("--"))
-  ([rails scr destr run]        '("Run destroy ..." . rails-destroy))
+  ([rails scr destr run]        '("Run destroy ..." . rails-script:destroy))
 
   ([rails ws] (cons "Web Server" (make-sparse-keymap "WebServer")))
 
@@ -203,19 +203,20 @@
   ((kbd "\C-c \C-c w a") 'rails-ws:auto-open-browser)
 
   ;; Rails finds
-  ((kbd "\C-c \C-c f m") 'rails-find-models)
-  ((kbd "\C-c \C-c f c") 'rails-find-controller)
-  ((kbd "\C-c \C-c f h") 'rails-find-helpers)
-  ((kbd "\C-c \C-c f l") 'rails-find-layout)
-  ((kbd "\C-c \C-c f s") 'rails-find-stylesheets)
-  ((kbd "\C-c \C-c f j") 'rails-find-javascripts)
-  ((kbd "\C-c \C-c f g") 'rails-find-migrate)
-
-  ((kbd "\C-c \C-c f v") 'rails-find-view)
-  ((kbd "\C-c \C-c f d") 'rails-find-db)
-  ((kbd "\C-c \C-c f p") 'rails-find-public)
-  ((kbd "\C-c \C-c f f") 'rails-find-fixtures)
-  ((kbd "\C-c \C-c f o") 'rails-find-config)
+  ((kbd "\C-c \C-c f m") 'rails-find:models)
+  ((kbd "\C-c \C-c f c") 'rails-find:controller)
+  ((kbd "\C-c \C-c f h") 'rails-find:helpers)
+  ((kbd "\C-c \C-c f l") 'rails-find:layout)
+  ((kbd "\C-c \C-c f s") 'rails-find:stylesheets)
+  ((kbd "\C-c \C-c f j") 'rails-find:javascripts)
+  ((kbd "\C-c \C-c f g") 'rails-find:migrate)
+  ((kbd "\C-c \C-c f b") 'rails-find:lib)
+  ((kbd "\C-c \C-c f t") 'rails-find:tasks)
+  ((kbd "\C-c \C-c f v") 'rails-find:view)
+  ((kbd "\C-c \C-c f d") 'rails-find:db)
+  ((kbd "\C-c \C-c f p") 'rails-find:public)
+  ((kbd "\C-c \C-c f f") 'rails-find:fixtures)
+  ((kbd "\C-c \C-c f o") 'rails-find:config)
 
   ;; Tests
   ((kbd "\C-c \C-c t")   'rails-rake-tests)
